lab-server/deployment/app/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-server-db
spec:
  # must be one, multiple instances will not share state
  replicas: 1
  selector:
    matchLabels:
      app: lab-server-db
  template:
    metadata:
      labels:
        app: lab-server-db
      name: lab-server-db
    spec:
      containers:
        - name: lab-server-db
          image: postgres:13
          volumeMounts:
            - name: lab-server-db-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "1"

      volumes:
        - name: lab-server-db-data
          persistentVolumeClaim:
            claimName: lab-server-db-volume-claim

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lab-server-db
  name: lab-server-db-service
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: lab-server-db
