lab-server/deployment/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-server
  labels:
    app: lab-server
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: lab-server
  template:
    metadata:
      labels:
        app: lab-server
    spec:
      containers:
        - image: ghcr.io/hpi-dhc/pharme-lab-server:main
          imagePullPolicy: "Always"
          name: lab-server
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: svc-lab-server
  labels:
    app: lab-server
spec:
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  selector:
    app: lab-server

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lab-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: lab-server-pharme.dhc-lab.hpi.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-lab-server
                port:
                  number: 3001
